No idea why Kupu insists on showing a 1px tall color picker in Safari only, but let's get rid of it and ask questions later. ;)
svn path=/PloneOrg/sandbox/xdv/new.plone.org/; revision=23239

--- a/new.plone.org/static/plone.css
+++ b/new.plone.org/static/plone.css
@@ -1636,5 +1636,9 @@ z-index: 999;
 #kupu-editor-iframe-text {
 	border: 1px solid Black;
 }
+#kupu-colorchooser {
+	display: none;
+}
+
 
 /* @end */
