Support old-style document descriptions.
svn path=/PloneOrg/sandbox/xdv/new.plone.org/; revision=23840

--- a/new.plone.org/static/plone.css
+++ b/new.plone.org/static/plone.css
@@ -892,6 +892,7 @@ div.box .date {
 }
 
 #content p.documentDescription,
+#content div.documentDescription,
 #description {
 	color: gray;
 	font: bold 1em "Helvetica Neue", Arial, sans-serif !important;
