--- a/new.plone.org/static/plone.css
+++ b/new.plone.org/static/plone.css
@@ -463,6 +463,8 @@ ul.topic li {
 
 /* @group Downloads tile */
 
+/* Refactor these */
+
 #download-plone {
 	background-image:url(images/download-plone.png);
 	background-repeat:no-repeat;
@@ -701,12 +703,19 @@ div.box .date {
 
 /* @group Accordion menu */
 
-#accordion {
+#accordion,
+dl.portlet {
 	border: 1px solid #eee;
 	background-color: #f6f6f6;
-	height: 29.7em;
 }
-#accordion h2 {
+
+#accordion {
+	height: 29.7em;	
+}
+
+
+#accordion h2,
+dl.portlet dt {
 	font-family: "Helvetica Neue", Arial;
 	background: #75ad0a url(images/accordion-gradient.png) repeat-x;
 	line-height: 2em;
@@ -716,6 +725,24 @@ div.box .date {
 	cursor: pointer;
 	font-weight: bold;
 }
+
+dl.portlet {
+	margin-top: 3em;
+	margin-left: 1em;
+}
+
+dl.portlet dt {
+	padding-left: 1em;
+}
+
+dl.portlet dt a {
+	color:  White;
+}
+
+dl.portlet dd {
+	font-size: 13px;	
+}
+
 
 #accordion h2.selected {
 	cursor: inherit;
@@ -783,10 +810,10 @@ div.box .date {
 
 #footer {
 	color: White;
-	font-size: 11px;
-	font-weight: bold;
+	font-family: "Lucida Grande", Verdana;
+	font-size: 10px;
 	background-color: #329fd7;
-	width: 780px;
+	width: 800px;
 	margin: 1em auto 0 auto;
 }
 
@@ -801,6 +828,45 @@ div.box .date {
 
 #footer-text {
 	padding: 5px 0 30px 0;	
+}
+
+/* @end */
+
+/* @group Site map */
+
+#sitemap {
+	margin-bottom: 3em;
+}
+
+#sitemap dl {
+	color: White;
+	display: inline-block;
+	vertical-align: top;
+	width: 16.3%;
+	font-family: "Lucida Grande", Verdana;
+}
+#sitemap dl a {
+	font-size: 10px;
+	color: White;
+	text-decoration: none;
+	display: block;
+	padding: 0.25em 6px;
+}
+#sitemap dl a:hover {
+	color: #329fd7;
+	background-color: White;
+}
+
+#sitemap dl dt {
+	font-weight: bold;
+}
+#sitemap dl dt a {
+	color: White;
+	font-size: 12px !important;
+}
+#sitemap dl dd {
+	margin:0;
+	font-weight: normal;
 }
 
 /* @end */
@@ -1078,16 +1144,16 @@ table.listing a:hover {
 }
 
 div.listingBar {
-	
+	font-size: 13px;	
 }
 
 div.listingBar a {
-
+	border: none !important;
 }
 
 div.listingBar a:hover {
 	color: White !important;
-	background-color: #75ad0a;
+	background-color: #329fd7;
 }
 
 div.listingBar a.listingNext {
@@ -1771,9 +1837,7 @@ background-color: #ffa;
 
 /* @group Portlets */
 
-/* @group General portlet layout */
-
-dl.portlet {
+/*dl.portlet {
 	margin-top: 3em;
 	margin-left: 1em;
 }
@@ -1848,7 +1912,7 @@ div.managePortletsLink a:hover {
 	background-color: #5a9bc6;
 	color: white;
 	border: 1px outset #e5e5e5;
-}
+}*/
 
 /* @end */
 
@@ -1861,13 +1925,9 @@ dl.portletNavigationTree dd a {
 	padding: 0;
 }
 
-dl.portletNavigationTree dd li li a {
-	padding-left: 35px;
-}
-
 dl.portletNavigationTree dd a:hover {
-	color: White !important;
-	background-color: #7dabcf !important;
+	color: White;
+	background-color: #329fd7;
 }
 
 dl.portletNavigationTree li {
@@ -1905,9 +1965,9 @@ dl.portletNavigationTree li a.navTreeCurrentItem span {
 	color: black !important;
 }
 
-/*li.navTreeItemInPath a.navTreeFolderish {
+li.navTreeItemInPath a.navTreeFolderish {
 	background: url(twistie-open-gray.gif) no-repeat 10px 6px;
-}*/
+}
 
 a.navTreeFolderish {
 	background: url(twistie-closed-gray.gif) no-repeat 10px 6px;
@@ -1929,11 +1989,11 @@ ul.portletNavigationTree li ul {
 }
 
 .navTreeLevel0 li a {
-	padding-left: 43px !important;
+	padding-left: 1.5em !important;
 }
 
 .navTreeLevel1 li a {
-	padding-left: 60px !important;
+	padding-left: 2em !important;
 	background-position: 27px 6px;
 }
 
@@ -2156,7 +2216,7 @@ dl.portletLogin dd a {
 /* @end */
 
 /* @group Table of Contents */
-/* Table of Contents styling - essentially a portlet with smaller fonts and aligned right + limited in width */
+ Table of Contents styling - essentially a portlet with smaller fonts and aligned right + limited in width 
 dl.toc {
 	float: right;
     width: 35%;
@@ -2178,7 +2238,7 @@ dl.toc dd ol {
 
 /* @end */
 
-/* @end */
+ @end */
 
 /* @group Visual editor */
 
