--- a/new.plone.org/static/plone.css
+++ b/new.plone.org/static/plone.css
@@ -727,20 +727,23 @@ dl.portlet dt {
 }
 
 dl.portlet {
-	margin-top: 3em;
-	margin-left: 1em;
+	margin: 0 0 1em 1em;
 }
 
 dl.portlet dt {
 	padding-left: 1em;
 }
 
-dl.portlet dt a {
-	color:  White;
+dl.portlet dt a:link,
+dl.portlet dt a:visited,
+dl.portlet dt a:hover {
+	color: White !important;
+	border: none !important;
 }
 
 dl.portlet dd {
 	font-size: 13px;	
+	padding: 1em;
 }
 
 
@@ -929,21 +932,28 @@ h2 a:link,
 #content ul,
 #content ol,
 #content table,
-#content dl {
+#content dl,
+dl.portlet p,
+dl.portlet ul {
 	margin: 0 1em 1em 0;
 	line-height: 1.5em;
 	color: black;
 	font-size: 13px;
-	text-align: justify;
+}
+
+#content p {
+	text-align: justify;	
 }
 
 
-#content a:link {
+#content a:link,
+dl.portlet a:link {
 	color: #205c90;
 	border-bottom: 1px solid #ccc;
 }
 
-#content a:link:hover {
+#content a:link:hover,
+dl.portlet a:link:hover {
 	color: #75ad0a;
 	border-bottom: 1px solid #ccc;
 }
@@ -963,17 +973,20 @@ h2 a:link,
 	max-width: 100%;
 }
 
-#content ul {
+#content ul,
+dl.portlet ul {
 	list-style-type: disc;
 	margin-left: 2em;
 }
 
-#content ol {
+#content ol,
+dl.portlet ol {
 	list-style-type: decimal;
 	margin-left: 2em;
 }
 
-#content li {
+#content li,
+dl.portlet li {
 	margin-bottom: 0.25em;
 	line-height: 1.5em;
 	display: list-item;
@@ -1719,8 +1732,7 @@ border: 1px solid #329fd7;
 border-style: solid none none none;
 }
 #content legend {
-background: White;
-padding: 0.5em;
+padding: 0.5em 0.5em 0.5em 0;
 font-size: 90%;
 }
 label {
@@ -1763,14 +1775,6 @@ width: 35%;
 margin: 0 1em;
 }
 #content input.searchButton {
-margin-bottom: 1px ! important;
-color: Black;
-font-size: 90%;
-background: White url(http://localhost:8080/demo/search_icon.gif) 2px 1px no-repeat;
-cursor: pointer;
-padding: 1px 1px 1px 19px;
-text-transform: none;
-border: 1px solid #8cacbb;
 }
 .searchSection {
 color: #76797c;
@@ -1836,6 +1840,11 @@ background-color: #ffa;
 
 
 /* @group Portlets */
+
+div.managePortletsLink {
+	text-align: center;
+	padding: 1em;
+}
 
 /*dl.portlet {
 	margin-top: 3em;
