--- a/new.plone.org/static/plone.css
+++ b/new.plone.org/static/plone.css
@@ -913,7 +913,12 @@ dl.portlet dd {
 	letter-spacing: -1px;
 	font: bold 18px/24px "Helvetica Neue", Arial, sans-serif;
 }
-
+#content h4 {
+	margin-top: 0.5em;
+	color: #444;
+	padding: 0;
+	letter-spacing: -1px;
+}
 
 #content h2 a:link,
 h2 a:link,
