made footer sitemap floated instead of inline-block. Works safer and better
svn path=/new.plone.org/trunk/; revision=24427

--- a/new.plone.org/static/plone.css
+++ b/new.plone.org/static/plone.css
@@ -864,11 +864,13 @@ dl.portlet dd {
 
 #sitemap dl {
 	color: White;
-	display: inline-block;
-	vertical-align: top;
+    /*display: inline-block;
+    vertical-align: top;*/
 	/*width: 16.3%;*/
 	width: 19.7%;
 	font-family: "Lucida Grande", Verdana;
+    float: left;
+    margin-bottom: 3em;
 }
 #sitemap dl a {
 	font-size: 10px;
