we don't need to float #action-menu. Doing so causes empty green bar in IE...
svn path=/new.plone.org/trunk/; revision=24433

--- a/new.plone.org/static/plone.css
+++ b/new.plone.org/static/plone.css
@@ -1140,8 +1140,8 @@ dl.portlet li {
 }
 
 #action-menu {
-	float:right;
-	clear: right;
+	/*float:right;
+	clear: right;*/
 }
 
 #action-menu ul li a {
