removed bullets for items in navigation portlet
svn path=/new.plone.org/trunk/; revision=24440

--- a/new.plone.org/static/plone.css
+++ b/new.plone.org/static/plone.css
@@ -1973,6 +1973,7 @@ dl.portletNavigationTree dd a:hover {
 
 dl.portletNavigationTree li {
 	display: block;
+	list-style: none;
 }
 
 dl.portletNavigationTree li a {
