Forward-porting changes from the 0.3 branch, since we ended up going with the xdv/trunk setup on plone.org.
svn path=/new.plone.org/trunk/; revision=24591

--- a/new.plone.org/static/plone.css
+++ b/new.plone.org/static/plone.css
@@ -16,17 +16,15 @@
    - Linked images should not have borders
    */
 
-a {
-	outline: none;
-}
 * { margin: 0; padding: 0; }
 * :link,:visited { text-decoration:none }
 * ul,ol { list-style:none; }
 * li { display: inline; }
 * h1,h2,h3,h4,h5,h6,pre,code { font-size:1em; }
 * a img,:link img,:visited img { border:none } 
+a { outline: none; }
 table { border-spacing: 0; }
-
+img { vertical-align: middle; }
 }
 
 /* @end */
@@ -990,12 +988,10 @@ dl.portlet a:link:hover {
 	border-bottom: 1px solid #ccc;
 }
 
-#content a:visited {
+#content a:visited, 
+dl.portlet a:visited {
 	color: #427597;
 	border-bottom: 1px solid #ccc;
-}
-#content a:visited:hover {
-	color: Black;
 }
 #content a:target {
 	background-color: #ffb !important;
