Better this way
svn path=/new.plone.org/trunk/; revision=24599

--- a/new.plone.org/static/plone.css
+++ b/new.plone.org/static/plone.css
@@ -1095,7 +1095,7 @@ dl.portlet li {
 }
 
 #content img.tileImage,
-#content img.newsImage {
+#content div.newsImageContainer {
 	float: right;
 	margin: 0 0 1em 1em;
 }
