Improved image captions
svn path=/new.plone.org/trunk/; revision=24652

--- a/new.plone.org/static/plone.css
+++ b/new.plone.org/static/plone.css
@@ -1105,6 +1105,9 @@ dl.portlet li {
 }
 #content div.newsImageContainer p.discreet {
 	margin: 0;
+	padding: 0.5em;
+	background-color: Black;
+	color: White;
 }
 /* @end */
 
