Needs explicit width
svn path=/new.plone.org/trunk/; revision=24654

--- a/new.plone.org/static/plone.css
+++ b/new.plone.org/static/plone.css
@@ -1102,6 +1102,7 @@ dl.portlet li {
 #content div.newsImageContainer {
 	float: right;
 	margin: 0 1em 0.5em 1em;
+	width: 200px;
 }
 #content div.newsImageContainer p.discreet {
 	margin: 0;
