I don't need any justification for this change.
svn path=/new.plone.org/trunk/; revision=24982

--- a/new.plone.org/static/plone.css
+++ b/new.plone.org/static/plone.css
@@ -975,7 +975,10 @@ dl.portlet ul {
 	font-size: 13px;
 }
 
-#content p {
+#content p,
+#content dl,
+#content ul,
+#content ol {
 	text-align: justify;	
 }
 
