--- a/new.plone.org/static/plone.css
+++ b/new.plone.org/static/plone.css
@@ -982,7 +982,6 @@ dl.portlet ul {
 	text-align: justify;	
 }
 
-
 #content a:link,
 dl.portlet a:link {
 	color: #205c90;
@@ -1061,7 +1060,8 @@ dl.portlet li {
 	color: gray;
 }
 
-#content .discreet {
+#content .discreet,
+#sidebar .discreet {
 	color: #666;
 	font-size: 11px;
 	font-weight: normal;
