Needs more cowbell^Wmargin.
svn path=/new.plone.org/trunk/; revision=25042

--- a/new.plone.org/static/plone.css
+++ b/new.plone.org/static/plone.css
@@ -228,7 +228,7 @@ div.splash {
 	background-color: #205c90;
 	color: White;
 	min-height: 196px;
-
+	margin-bottom: 1em;
 	border-radius: 0.5em;
 	-webkit-border-radius: 0.5em;
 	-moz-border-radius: 0.5em;
