Make documentByLine work on span elements
svn path=/new.plone.org/trunk/; revision=25072

--- a/new.plone.org/static/plone.css
+++ b/new.plone.org/static/plone.css
@@ -1050,7 +1050,8 @@ dl.portlet li {
 	font-family: Monaco, Consolas, Inconsolata, "Courier New", monospace;
 }
 
-#content div.documentByLine {
+#content div.documentByLine, 
+#content span.documentByLine, {
 	margin-bottom: 10px;
 	font-size: 11px;
 	display: block;
